# rust_training

chat/: Cargo.toml
chat/chat_client/src/: lib.rs
chat/chat_server/: Cargo.toml
chat/chat_server/src/: chat.rs  handler.rs  main.rs
chat/chat_tui/: Cargo.toml
chat/chat_tui/src/: main.rs  state.rs
chat/stp/: Cargo.toml
chat/stp/src/: client.rs  error.rs  lib.rs  server.rs
client/src/: main.rs
lecture13/src/: main.rs
multi_threading/: Cargo.toml
multi_threading/src/: lib.rs  main.rs
news_parser/: .env  Cargo.toml
news_parser/newsapi/: Cargo.toml
news_parser/newsapi/src/: error.rs  lib.rs
news_parser/src/: main.rs  theme.rs
newsgui/headlines/: Cargo.toml
newsgui/headlines/src/: main.rs  style.rs
newsgui/newsapi/: Cargo.toml
newsgui/newsapi/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
sha1_cracker/src/: main.rs
snake_game/: Cargo.toml
snake_game/src/: draw.rs  game.rs  main.rs  snake.rs
