[package]
name = "news_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Simple news reader with rust"
license = "MIT"
authors = ["L1chik"]

[dependencies]
newsapi = { path = "./newsapi", features = ["async"] }
colour = "0.6.0"
termimad = "0.20.0"
crossterm = "0.22.1"
cargo-deb = "1.35.0"
dotenv = "0.15.0"
tokio = { vesrion = "1.15.0", features = ["full"] }